--- a/KM2/wb-3.ipynb
+++ b/KM2/wb-3.ipynb
@@ -1810,7 +1810,9 @@
    "cell_type": "code",
    "execution_count": 89,
    "id": "5e35162f",
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "data": {
@@ -2231,7 +2233,7 @@
    "id": "dc7cdb77",
    "metadata": {},
    "source": [
-    "<img src=\"./wykresy/siim_image_quality_by_pneumonia.svg\">"
+    "![image](./wykresy/siim_image_quality_by_pneumonia.png)"
    ]
   },
   {
@@ -2239,7 +2241,7 @@
    "id": "bcb76f97",
    "metadata": {},
    "source": [
-    "<img src=\"./wykresy/siim_image_quality_by_atypical.svg\">"
+    "![image](./wykresy/siim_image_quality_by_atypical.png)"
    ]
   },
   {
@@ -2271,7 +2273,7 @@
    "id": "934b2e1a",
    "metadata": {},
    "source": [
-    "<img src=\"./wykresy/siim_blur.svg\">"
+    "![image](./wykresy/siim_blur.png)"
    ]
   },
   {
@@ -2288,7 +2290,7 @@
    "metadata": {},
    "source": [
     "Na zdjęciu widoczna aparatura medyczna\n",
-    "<img src=\"./wykresy/siim_aparature_example.svg\">"
+    "![image](./wykresy/siim_aparature_example.png)"
    ]
   },
   {
@@ -2352,7 +2354,7 @@
    "id": "0f0b9297",
    "metadata": {},
    "source": [
-    "<img src=\"./wykresy/siim_image_sizes.svg\">"
+    "![image](./wykresy/siim_image_sizes.png)"
    ]
   },
   {
@@ -2392,7 +2394,7 @@
    "id": "5d63b53a",
    "metadata": {},
    "source": [
-    "<img src=\"./wykresy/siim greyscale histogram.svg\">"
+    "![image](./wykresy/siim_greyscale_histogram.png)"
    ]
   },
   {
@@ -2400,7 +2402,7 @@
    "id": "65ba1411",
    "metadata": {},
    "source": [
-    "<img src=\"./wykresy/siim_mean_std_plot.svg\">"
+    "![image](./wykresy/siim_mean_std_plot.png)"
    ]
   },
   {
@@ -2463,11 +2465,11 @@
    "id": "1cbb3326",
    "metadata": {},
    "source": [
-    "<img src=\"./wykresy/siim_histogram_shifted.svg\">\n",
+    "![image](./wykresy/siim_histogram_shifted.png)\n",
     "\n",
     "histogram powyżej to histogram dla tego zdjęcia:\n",
     "\n",
-    "<img src=\"./wykresy/siim_histogram_shifted_image.svg\">"
+    "![image](./wykresy/siim_histogram_shifted_image.png)"
    ]
   },
   {
@@ -2500,7 +2502,7 @@
    "metadata": {},
    "source": [
     "W bazie danych Luna-16 rozkład próbki zdjęć wygląda tak:\n",
-    "<img src=\"./wykresy/luna_16_quality_of_image.svg\">"
+    "![image](./wykresy/luna_16_quality_of_image.png)"
    ]
   },
   {
@@ -2516,7 +2518,7 @@
    "id": "be14d6af",
    "metadata": {},
    "source": [
-    "<img src=\"./wykresy/luna_blur.svg\">"
+    "![image](./wykresy/luna_blur.png)"
    ]
   },
   {
@@ -2553,12 +2555,13 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "3c54fb17",
    "metadata": {},
    "source": [
     "Najczęstsze występowanie zmiany w płucach:\n",
-    "<img src=\"./wykresy/annotation_location.svg\">"
+    "![image](./wykresy/annotation_location.png)"
    ]
   },
   {
