km5 obrazy poprawione

--- a/KM5/MODEL_WB_OBRAZY_KM5.ipynb
+++ b/KM5/MODEL_WB_OBRAZY_KM5.ipynb
@@ -676,7 +676,9 @@
    "metadata": {},
    "source": [
     "## Podsumowanie\n",
-    "W naszym modelu wykorzystaliśmy 2 bazy danych, które połączyliśmy wykorzystując foldery jednej z nich a następnie wczytując kolejne zdjęcia z drugiej ramki za pomocą przygotowanego przez nas kodu. Końcowo dzięki odpowiedniemu processingowi zdjęć udało nam się uzyskać satysfakcjonujące wyniki."
+    "W naszym modelu wykorzystaliśmy 2 bazy danych, które połączyliśmy wykorzystując foldery jednej z nich a następnie wczytując kolejne zdjęcia z drugiej ramki za pomocą przygotowanego przez nas kodu. Końcowo dzięki odpowiedniemu processingowi zdjęć udało nam się uzyskać satysfakcjonujące wyniki.\n",
+    "\n",
+    "Link do strony, z której wykorzystaliśmy kod: https://towardsdatascience.com/deep-learning-for-detecting-pneumonia-from-x-ray-images-fc9a3d9fdba8"
    ]
   }
  ],
